Modified packaging method in package.json and added links to README

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
       "category": "public.app-category.games"
     },
     "win": {
-      "target": "zip"
+      "target": "7z"
     },
     "directories": {
       "output": "build"
