Handled exceptions for faulty buffers. Renamed UI Events. Fixed mistake in diconnect call from UI.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "host":"127.0.0.1",
     "port":8080,
+    "ping interval": "00:01",
     "design":[
         [4,0,0,1,0,0,0,4,0,0,0,1,0,0,4],
         [0,3,0,0,0,2,0,0,0,2,0,0,0,3,0],
