Updated README file with details about server configuration. Updated default configuration to listen to 0.0.0.0. Updated Scrabble-Utils to read Blank score from config.json. Updated Log and Final-Checkpoint filename timestamp format.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "host":"127.0.0.1",
+  "host":"0.0.0.0",
   "port":8080,
   "ping interval": "00:01",
   "rack size": 7,
@@ -21,7 +21,7 @@
       [0,3,0,0,0,2,0,0,0,2,0,0,0,3,0],
       [4,0,0,1,0,0,0,4,0,0,0,1,0,0,4]
   ],
-  "letterScores":{
+  "tile scores":{
       "A":1,
       "B":3,
       "C":3,
@@ -50,7 +50,7 @@
       "Z":10,
       "_":0
   },
-  "letterFrequencies":{
+  "tile frequencies":{
       "A":9,
       "B":2,
       "C":2,
