Added Protocol Document to Repository. Removed docs folder from dist file.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
           "!examples${/*}",
           "!tests${/*}",
           "!dist${/*}",
+          "!docs${/*}",
           "!logs${/*}",
           "!checkpoints${/*}",
           "!.eslintrc.js",
