--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "hot": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "pack-client": "pkg examples/client.js --output dist/client.exe"
   },
   "keywords": [],
   "author": "Yetman <yahiazakaria13@gmail.com>",
@@ -75,7 +76,8 @@
     "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-vue": "^4.7.1",
     "jest": "^23.6.0",
-    "laravel-mix": "^2.1.14"
+    "laravel-mix": "^2.1.14",
+    "pkg": "^4.3.4"
   },
   "dependencies": {
     "dateformat": "^3.0.3",
